# policy-sql-dataset

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: spec.md
memo/: data-analysis.md
scripts/: setup.sh
src/: __init__.py  gold_generator.py  main.py  negative_generator.py  output_writer.py  policy_assigner.py  qa_checker.py  rewriter.py  role_extractor.py  spider_loader.py  types.py  violation_checker.py
tasks/: 00-overview.md  01-setup.md  02-spider-loader.md  03-policy-assigner.md  04-role-extractor.md  05-violation-checker.md  06-rewriter.md  07-gold-generator.md  08-negative-generator.md  09-output-writer.md  10-qa-checker.md
