[project]
name = "policy-sql-dataset"
version = "1.0.0"
description = "Column-level Role-Sensitive Usage Policy Dataset for Text2SQL evaluation"
requires-python = ">=3.11"
dependencies = [
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
